Fixed shifting on Graph Error rollover.

--- a/scss/views/docView.scss
+++ b/scss/views/docView.scss
@@ -162,6 +162,7 @@
 	.error {
 		background: #FCC;
 		border-bottom: solid 2px red;
+		padding-bottom: 0.5em;
 		
 		.error-title {
 			font-weight: bold;
